feat[] update user
